--- a/assets/stylesheets/ts/home.scss
+++ b/assets/stylesheets/ts/home.scss
@@ -64,10 +64,15 @@ section.hero {
                 }
 
                 &.hero-1 {
-
+                    background: url("/assets/images/home/mc1.jpg");
+                    background-position: center;
+                    background-size: cover;
                     position: relative;
-
-
+                }
+                &.hero-2 {
+                    background: url("/assets/images/home/mc5.jpg");
+                    background-position: right 40% center;
+                    background-size: cover;
                 }
 
 
@@ -94,7 +99,7 @@ section.hero {
                         font-weight: 600;
 
                         .accent {
-                            color: var(--accent-color);
+                            color: $accent-color;
                         }
                     }
 
@@ -128,7 +133,7 @@ section.hero {
                         display: inline-flex;
                         align-items: center;
                         font-weight: 500;
-                        background-color: var(--accent-color);
+                        background-color: $accent-color;
                     }
 
                     .sec {
@@ -138,7 +143,7 @@ section.hero {
                         padding: 0 32px;
                         display: inline-flex;
                         align-items: center;
-                        background-color: var(--accent-color-2);
+                        background-color: $accent-color-2;
                     }
                 }
             }
@@ -313,6 +318,5 @@ section.about-us {
 
 
 }
-
 
 
